# kata-doppelganger

./: FACILITATION.md  README.md  pom.xml
cs/: Doppelganger.sln
cs/Doppelganger/: Calculator.cs  DiscountApplier.cs  IAuthorizer.cs  IHttpClient.cs  INotifier.cs  MailSender.cs  Response.cs  SafeCalculator.cs  SendMailRequest.cs  SendMailResponse.cs  SendRequest.cs  User.cs
cs/Doppelganger.Tests/: CaclulatorTest.cs  CalculatorTest.cs  DiscountApplierTest.cs  Doppelganger.Tests.csproj  MailSenderTest.cs  SafeCalculatorTest.cs
java/: README.md  pom.xml
js/: .copier-answers.yml  README.md  calculator.js  discount-applier.js  index.js  mail-sender.js  package-lock.json  package.json  safe-calculator.js  tests.js
js/tests/: calculotor.test.js  discount-applier.test.js  mail-sender.test.js  safe-calculator.test.js  safe-calculotor.test.js
php/: README.md  composer.json
php/src/: AuthorizerInterface.php  DiscountApplier.php  HttpClientInterface.php  MailSender.php  NotifierInterface.php  SafeCalculator.php  SendMailRequest.php  SendMailResponse.php  User.php
php/tests/: DiscountApplierTest.php  MailSenderTest.php  SafeCalculatorTest.php
python/: README.md  calculator.py  discount_applier.py  mail_sender.py  pyproject.toml  safe_calculator.py  user.py
python/tests/: test_calculator.py  test_discount_applier.py  test_mail_sender.py  test_safe_calculator.py
ts/: README.md  discount-applier.ts  mail-sender.ts  package-lock.json  package.json  safe-calculator.ts  tsconfig.json  user.ts
ts/tests/: discount-applier.test.ts  mail-sender.test.ts  (+1 more)
(+32 files in other folders)
