[tool.poetry]
name = "doppelganger"
version = "0.1.0"
authors = ["your-team@efrei.net"]
description = "Kata about test doubles"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
